# Console-Based-Library-Management-System

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md  build_and_test.sh  make.sh
doc/: Doxyfile
include/: Application.hpp  Book.hpp  Database.hpp  Library.hpp  Menu.hpp  Multithreading.hpp  Networking.hpp  Persistence.hpp  Transaction.hpp  User.hpp  Utils.hpp
lib/: Application.cpp  Book.cpp  Database.cpp  Library.cpp  Menu.cpp  Multithreading.cpp  Networking.cpp  Persistence.cpp  Transaction.cpp  User.cpp  Utils.cpp  main.cpp
tests/: ApplicationTest.cpp  BookTest.cpp  DatabaseTest.cpp  LibraryTest.cpp  MenuTest.cpp  PersistenceTest.cpp  TransactionTest.cpp  UserTest.cpp
